# routes/modules/employees.js
@@ -39,15 +39,24 @@ router.post(
   '/:id/attendances',
   [bodyPunchIn, queryLocation, validationCallback],
   attendanceController.punchIn
-  // #swagger.tags = ['Attendance']
-  // #swagger.description = 'Api for employee punch in'
+  /*  #swagger.tags = ['Attendance']
+      #swagger.description = 'Api for employee punch in'
+      #swagger.responses[200] = {
+        description: 'Punch in successfully and return record',
+        schema: {
+          message:'Punch in successfully',
+          data:{ $ref: '#/definitions/punch_in' }
+        }
+    }  */
 )
 router.patch(
   '/:employeeId/attendances/:attendanceId',
   [bodyPunchOut, queryLocation, validationCallback],
   attendanceController.punchOut
-  // #swagger.tags = ['Attendance']
-  // #swagger.description = 'Api for employee punch out'
+  /*  #swagger.tags = ['Attendance']
+      #swagger.description = 'hahahaApi for employee punch out'
+  */
+
 )
 
 module.exports = router
